fixed issue with text alignment sidebar, undid flashing background

--- a/src/client/layout/Root.less
+++ b/src/client/layout/Root.less
@@ -5,46 +5,32 @@
 }
 :root {
   --animation-timing: 200ms ease-in-out;
-  
+  overflow: hidden;
+  box-sizing: border-box;
 }
 
 html {
-  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-  background-size: 2300% 400%;
-  animation: gradient 15s ease infinite;
-  @keyframes gradient {
-    0% {
-      background-position: 0% 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
-    }
-  }
-  // ------------- Alternative Background ----------------
-  // background-image: url(https://images.pexels.com/photos/1261728/pexels-photo-1261728.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
-  // background-position: center;
-  // background-repeat: no-repeat;
-  // background-size: cover;
   height: 100%;
+  overflow: hidden;
+  box-sizing: border-box;
 }
 body {
   margin: 0 auto;
   max-width: 100%;
-  padding-bottom: 10px;
   height: 100%;
   overflow-x: hidden;
+  box-sizing: border-box;
   #root {
-    height: 100%;
+    // height: 100%;
     overflow-x: hidden;
-    
+    box-sizing: border-box;
   }
 }
 
 main {
   display: flex;
   justify-content: center;
-  height: auto;
+  height: 100%;
+  overflow: hidden;
+  box-sizing: border-box;
 }
